--- a/TP_02/templates/administration.html
+++ b/TP_02/templates/administration.html
@@ -8,8 +8,12 @@
 <ul class="nav nav-tabs justify-content-center" style=" padding-right: 2%; padding-left: 7%;">
     <!-- Navigation tabs -->
     <li class="nav-item" style="margin-left: auto;">
-        <a class="nav-link link-body-emphasis" href="/liste">Home</a>
+        <a class="nav-link link-body-emphasis" href="/liste">Accueil</a>
         <!-- Link to home page -->
+    </li>
+    <li class="nav-item">
+        <a class="nav-link link-body-emphasis" href="/profile">Profil</a>
+        <!-- Link to profile page -->
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="/administration">Admin</a>
@@ -17,7 +21,7 @@
     </li>
     <li class="nav-item" style="margin-left: auto;">
         <form action="/logout" method="post">
-            <button class="btn btn-danger" type="submit">Logout</button>
+            <button class="btn btn-danger" type="submit">Se déconnecter</button>
             <!-- Logout button -->
         </form>
     </li>
