--- a/TP_02/templates/login.html
+++ b/TP_02/templates/login.html
@@ -17,6 +17,9 @@
                 <button type="submit" class="btn btn-primary">Se connecter</button>
             </form>
             <p class="text-center">Pas encore de compte ? <a href="/register">Inscrivez-vous</a></p>
+            <p class="text-center">Changer de mot de passe ? <a href="/new_mdp">Réinitialisez-le</a></p>
+            <p class="text-center"><a href="/liste">Continuer hors-connexion</a></p>
+
         </div>
         {% if message != "None" %}
         <div class="alert alert-success" role="alert">
