--- a/TP_02/templates/save_book.html
+++ b/TP_02/templates/save_book.html
@@ -1,12 +1,14 @@
 {% extends "index.html" %}
 {% block content %}
 
-<div style="position: absolute; top: 10px; right: 10px;">
-    <!-- Logout button -->
-    <form action="/logout" method="post">
-        <button class="btn btn-danger" type="submit">Logout</button>
-    </form>
-</div> <br>
+<ul class="nav nav-tabs justify-content-center" style=" padding-right: 2%; padding-left: 7%;">
+    <li class="nav-item" style="margin-left: auto;">
+        <form action="/logout" method="post" >
+            <button class="btn btn-danger" type="submit" >Se déconnecter</button>
+            <!-- Logout button -->
+        </form>
+    </li>
+</ul><br>
 
 <form action="/save" method="post" class="container">
     <!-- Form for adding a new book -->
@@ -32,11 +34,18 @@
         <input type="text" id="book_editor" class="form-control"
                name="Editor" placeholder="LPG"/>
     </div>
-    <br>
+    <div class="input-group mb-3">
+        <!-- Form group for book price -->
+        <label for="book_price" class="input-group-text">Prix</label>
+        <input type="number" id="book_price" class="form-control"
+               name="price" required="true" placeholder="15" min="0"/>
+    </div>
     <div class="d-flex justify-content-between">
         <!-- Container for buttons -->
-        <a href="/liste"><button type="button" class="btn btn-outline-dark">Annuler</button></a>
+        <div>
+        <a href="/profile"><button type="button" class="btn btn-outline-dark">Annuler</button></a>
         <button type="submit" class="btn btn-outline-dark">Confirmer</button>
+        </div>
         <h5> Nombres de livres : {{Nombre}} </h5>      
     </div>    
 </form>
