--- a/TP_02/templates/profile.html
+++ b/TP_02/templates/profile.html
@@ -50,6 +50,7 @@
     </form>
     <br>
     <h2 class="display-6 text-center">Livres</h2><br>
+    <h5> Nombres de livres : {{nb}} </h5>
     <table class="table table-hover">
         <tr>
             <th>Id</th>
