--- a/templates/beers.html
+++ b/templates/beers.html
@@ -67,7 +67,8 @@
             <th>Prix</th>-->
             {% if current_user != None%}
             {%endif%}
-        {% for beer, owner in beer_with_owner %}
+
+        {% for beer in beers %}
         
         <div class="col col-sm-12 col-md-12 mb-3 mb-sm-0">
             <!-- Column for alcohol item -->
