--- a/templates/panier.html
+++ b/templates/panier.html
@@ -55,7 +55,7 @@
     </div>
 </nav>
 <h5> Nombres de livres : {{nb}} </h5>
-    <table class="table table-hover">
+    <!--<table class="table table-hover">
         <tr>
             <th>Id</th>
             <th>Nom</th>
@@ -67,7 +67,7 @@
         </tr>
         {% for beer in beers %}
             {{ show_beers(beer.id, beer.name, beer.Author, beer.Editor, beer.price, current_user, in_profile, beer.bought) }}
-        {% endfor%}
+        {% endfor%}-->
     </table>
 </div>
 {% endblock %}
