--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 {% from "beers_macro.html" import show_beers %}
 {% block content %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-warning" style="margin-bottom: 20px;">
-    <div class="container-fluid border-bottom border-4 border-warning">
-        <a href="/liste" class="navbar-brand text-warning" style="font-size: 75px; text-decoration: none; font-family: 'Brush Script MT', cursive;">BuyBeer</a>
+<nav class="navbar navbar-expand-lg " style=" height: 200px; border-color: #BA4A00; margin-bottom: 20px;">
+    <div class="container-fluid border-bottom border-4" style=" padding-bottom: 10px; padding-left: 20px; border-color: #BA4A00;">
+        <a href="/liste" class="navbar-brand " style=" margin-right: 50px; color :#BA4A00; font-size: 75px; text-decoration: none; font-family: 'Brush Script MT', cursive;">BuyBeer</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,13 +32,13 @@
                 
                 {% endif %}
                     <li class="nav-item dropdown" >
-                        <a class="nav-link dropdown-toggle text-warning" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle " style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Bonjour Mr/Mlle {{current_user.name}}
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/panier">Panier</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><form action="/logout" method="post" class="dropdown-item" ><button class="btn btn-outline-warning" type="submit" >Se déconnecter</button>
+                            <li><form action="/logout" method="post" class="dropdown-item" ><button class="btn btn-outline-dark" type="submit" >Se déconnecter</button>
                                 <!-- Logout button -->
                                 </form></a>
                             </li>
@@ -55,7 +55,7 @@
     </div>
 </nav>
 <br>
-<div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%">
+<div class="container border rounded-4 border-2 p-4 mb-4 border-opacity-75" style=" width: 50%; color: #BA4A00">
     <h2 class="display-6 text-center">Profil - {{ current_user.group }}</h2><br>
     <form action="/profile" method="post">
         <div class="input-group mb-3">
@@ -66,32 +66,15 @@
             <label for="surname" class="input-group-text">Prénom</label>
             <input type="text" id="surname" class="form-control" name="surname" value="{{current_user.surname}}" required="true"/>
         </div>
-        <div class="input-group mb-3">
+        <div class="input-group mb-5">
             <label for="username" class="input-group-text">Nom d'utilisateur</label>
             <input type="text" id="username" class="form-control" name="username" value="{{current_user.username}}" required="true"/>
         </div>
         <div class="grid text-center">
             <a href="/new_mdp"><button type="button" class="btn btn-outline-dark">Changer de mot de passe</button></a>
             <button type="submit" class="btn btn-outline-dark">Modifier le profil</button>
-            <a href="/save"><button type="button" class="btn btn-outline-dark g-col-6 w-25 p-2">Ajouter un nouveau livre</button></a>
         </div>
     </form>
-    <br>
-    <h2 class="display-6 text-center">Livres</h2><br>
-    <h5> Nombres de livres : {{nb}} </h5>
-    <table class="table table-hover">
-        <tr>
-            <th>Id</th>
-            <th>Nom</th>
-            <th>Auteur</th>
-            <th>Editeur</th>
-            <th>Prix</th>
-            <th>Etat</th>
-            <th>Actions</th>
-        </tr>
-        {% for beer in beers %}
-            {{ show_beers2(beer.id, beer.name, beer.Author, beer.Editor, beer.price, current_user, in_profile, beer.bought) }}
-        {% endfor%}
-    </table>
+    
 </div>
 {% endblock %}
