--- a/templates/beers.html
+++ b/templates/beers.html
@@ -33,14 +33,14 @@
                   {% endif %}
                       <li class="nav-item dropdown" >
                           <a class="nav-link dropdown-toggle " style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Bonjour Mr/Mlle {{current_user.name}}
+                            [{{nb}}] Bonjour Mr/Mlle {{current_user.name}} 
                           </a>
                           <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="/panier">Panier</a></li>
+                              <li><a class="dropdown-item" href="/panier">Panier [{{nb}}]</a></li>
                               <li><hr class="dropdown-divider"></li>
                               <li><form action="/logout" method="post" class="dropdown-item" ><button class="btn btn-outline-dark" type="submit" >Se déconnecter</button>
                                   <!-- Logout button -->
-                                  </form></a>
+                                  </form>
                               </li>
                           </ul>
                       </li>
@@ -70,7 +70,7 @@
 
         {% for beer in beers %}
         
-        <div class="col col-sm-12 col-md-12 mb-3 mb-sm-0">
+        <div class="col col-sm-12 col-md-12 mb-3 mb-sm-0" style="padding-left:  50px;">
             <!-- Column for alcohol item -->
             <div class="row g-0">
                 <div class="col-md-2">
@@ -79,17 +79,19 @@
                 <div class="col-md-8">
                     <div class="card mb-3" style="border-color: #BA4A00; width: 100%;">
                         <!-- Adjusted card width -->
-                        <div class="card-body">
+                        <div class="card-body text-center">
                             <!-- Body of the card -->
-                            <h5 class="card-title">{{ beer.name }}</h5>
+                            <h5 class="card-title mb-3">{{ beer.name }}</h5>
                             <!-- Name of the alcohol -->
-                            <p class="card-text">{{beer.description}}</p>
+                            <p class="card-text ">{{beer.description}}</p>
 
                             <p class="card-text">Prix: {{ beer.price }}</p>
                             <!-- Price of the alcohol -->
                             {% if current_user != None %}
                             <!-- Check if user is logged in -->
-                            <a href="#" class="btn btn-outline-dark " >Acheter</a>
+                            <form action="/buy/{{beer.id}}" method="post" class="dropdown-item" >
+                                <button class="btn btn-outline-dark" type="submit" style=" width: 200px;">Acheter</button>
+                                  </form>
                             <!-- Button to buy alcohol -->
                             {% endif %}
                         </div>
@@ -104,7 +106,7 @@
 
         <!-- Table row for the number of beers -->
         <br>
-        <div class="grid text-center mb-5">Nombres d'articles : {{ Nombre }}</div>    
+        <div class="grid text-end mb-5" style="width: 84%; font-size: 15px">Nombres d'articles : {{ Nombre }}</div>    
     </div>
     
     
