--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
                 {% endif %}
                     <li class="nav-item dropdown" >
                         <a class="nav-link dropdown-toggle " style="color: #BA4A00;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Bonjour Mr/Mlle {{current_user.name}}
+                            [{{nb}}] Bonjour Mr/Mlle {{current_user.name}}
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/panier">Panier</a></li>
