--- a/templates/beers_macro.html
+++ b/templates/beers_macro.html
@@ -49,10 +49,11 @@
     </tr>
     {%endif%}
 {% endmacro %}
-{% macro show_beers(name, brewery, price, stock, description, quantity=1) %}
+{% macro show_beers(id, name, brewery, price, stock, description, quantity=1) %}
 <!-- Define a macro named show_books with parameters for book information -->
     <tr>
     <!-- Start a table row -->
+        <td></td>
         <td>{{ name }}</td>
         <td>{{ brewery }}</td>
         <td>{{ price }}</td>
@@ -60,5 +61,10 @@
         <td>
             <input style="width: 50px;" type="number" name="quantity" value="{{ quantity }}" min="0"> 
         </td>
+        <td><form action="/deletepanier/{{id}}" method="post">
+            <!-- Form to delete beer -->
+                <button class="btn btn-outline-dark" type="submit">Retirer du panier</button>
+                <!-- Submit button for deletion -->
+            </form></td>
     </tr>
 {% endmacro %}
