--- a/templates/error.html
+++ b/templates/error.html
@@ -23,17 +23,17 @@
             <!-- Path for warning icon -->
           </symbol>
         </svg>
-      <div class="alert alert-warning d-flex align-items-center" role="alert">
+      <div class="alert alert-warning d-flex align-items-center text-center" role="alert">
         <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-        <div>
+        <div >
           {{ code }} {{ description }}
           <!-- Display error code and description -->
         </div>
       </div>
 
-      <a href="/{{url}}" >
+      <a href="/{{url}}">
         <!-- Link to specified URL -->
-        <button class="btn btn-outline-dark g-col-6 w-25 p-2">Retour</button>
+        <button class="btn btn-outline-dark g-col-6 w-25 p-2" style="margin-left: 37%;">Retour</button>
         <!-- Button for returning to URL -->
       </a>
     </div>
